# android_ndk_learn

./: README.md  settings.gradle
eg1/: build.gradle
eg1/src/main/: AndroidManifest.xml
eg1/src/main/cpp/: native-lib.cpp
eg1/src/main/res/layout/: activity_main.xml
eg3/: build.gradle
eg3/src/main/: AndroidManifest.xml
eg3/src/main/cpp/: native-lib.cpp
eg4/: build.gradle
eg4/src/main/: AndroidManifest.xml
eg4/src/main/cpp/: CMakeLists.txt  native-lib.cpp
eg5/: build.gradle
eg5/src/main/: AndroidManifest.xml
eg5/src/main/cpp/: CMakeLists.txt  encryptor.cpp  native-lib.cpp
eg6/: build.gradle
eg6/src/main/: AndroidManifest.xml
eg6/src/main/cpp/: CMakeLists.txt  bitmap.cpp  native-lib.cpp
eg7/: build.gradle
eg7/src/main/: AndroidManifest.xml
eg7/src/main/cpp/: native-lib.cpp
eg8/: build.gradle
eg8/src/main/: AndroidManifest.xml
eg8/src/main/cpp/: CMakeLists.txt  LogUtils.h  file_operation.cpp  native-lib.cpp
eg9/: build.gradle
eg9/src/main/: AndroidManifest.xml
eg9/src/main/cpp/: CMakeLists.txt  LogUtils.h  jni_callback.cpp
gradle/wrapper/: gradle-wrapper.properties
ndk_Learn/: settings.gradle
ndk_Learn/eg1/src/main/: AndroidManifest.xml
ndk_Learn/eg10/src/main/: AndroidManifest.xml
ndk_Learn/eg3/src/main/: AndroidManifest.xml
ndk_Learn/eg4/src/main/: AndroidManifest.xml
ndk_Learn/eg5/src/main/: AndroidManifest.xml
ndk_Learn/eg6/src/main/: AndroidManifest.xml
ndk_Learn/eg7/src/main/: AndroidManifest.xml
ndk_Learn/eg8/src/main/: AndroidManifest.xml
ndk_Learn/eg9/src/main/: AndroidManifest.xml
(+52 files in other folders)
